--- a/cestabasica/app/templates/app/criarcesta.html
+++ b/cestabasica/app/templates/app/criarcesta.html
@@ -1,10 +1,11 @@
 ﻿{% extends "app/layout.html" %}
 {% block content %}
-  <form action="" method="post" autocomplete="off">
-        {% csrf_token %}
-       <div class="container">
-        {{ form.as_p }}
-        </div>
-       <button class="btn btn-success" type="submit">Cadastrar</button>
-    </form>
+<h1 style="text-align:center"><b>Cadastrar de Cesta</b></h1>
+<form action="" method="post" autocomplete="off">
+  {% csrf_token %}
+  <div class="container">
+    {{ form.as_p }}
+  </div>
+  <button class="btn btn-success" type="submit">Cadastrar</button>
+</form>
 {% endblock %}
