--- a/cestabasica/app/templates/app/criarcliente.html
+++ b/cestabasica/app/templates/app/criarcliente.html
@@ -1,10 +1,12 @@
 ﻿{% extends "app/layout.html" %}
 {% block content %}
-    <form action="" method="post" autocomplete="off">
-        {% csrf_token %}
-       <div class="container">
+<h1 style="text-align:center"><b>Cadastrar Cliente</b></h1>
+<p></p>
+<form action="" method="post" autocomplete="off">
+    {% csrf_token %}
+    <div class="container">
         {{ form.as_p }}
-        </div>
-       <button class="btn btn-success" type="submit">Cadastrar</button>
-    </form>
+    </div>
+    <button class="btn btn-success" type="submit">Cadastrar</button>
+</form>
 {% endblock %}
